# rust-react-chat

./: Cargo.toml  README.md
migrations/: 1_users.sql  2_rooms.sql  3_conversations.sql  4_dummy_users.sql  5_dummy_rooms.sql  6_dummy_conversations.sql
src/: db.rs  main.rs  models.rs  routes.rs  server.rs  session.rs
ui/: package-lock.json  package.json
ui/src/api/: chat.ts  room.ts  user.ts  websocket.ts
ui/src/app/: globals.css  page.module.css  page.tsx
ui/src/app/chat/: page.module.css  page.tsx
ui/src/app/signup/: page.module.css  page.tsx
ui/src/components/: Avatar.module.css  Avatar.tsx  ChatAside.module.css  ChatAside.tsx  ChatBoard.module.css  ChatBoard.tsx  ConversationBanner.module.css  ConversationBanner.tsx  ConversationBoard.module.css  ConversationBoard.tsx  Login.module.css  Login.tsx  NewMessageForm.module.css  NewMessageForm.tsx  NewRoom.module.css  NewRoom.tsx  Room.module.css  Room.tsx  Rooms.tsx  Signup.tsx  conversation.module.css  conversation.tsx
ui/src/libs/: types.ts  useConversation.ts  useDateParser.ts  useUser.ts  useWebsocket.ts
